--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huella solidarias</title>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/accesibility.css">
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/accesibility.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/><!--font awesome-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"/>
   </head>
@@ -24,7 +24,7 @@
           <p>Un hogar, una caricia, una nueva oportunidad.</p>
         </div>
         <div class="imagen">
-          <img src="../assets/img/principal.png" alt="Perro y gato" />
+          <img src="assets/img/principal.png" alt="Perro y gato" />
         </div>
         <!--Efecto curva-->
         <div class="wave">
@@ -44,19 +44,19 @@
       <div class="reportes-contenedor">
         <!--Abandonado-->
         <div class="reporte-card abandonado">
-          <div class="img-box"><img src="../assets/img/abandonados.png" alt="Animal Abandonado" /></div> 
+          <div class="img-box"><img src="assets/img/abandonados.png" alt="Animal Abandonado" /></div> 
           <a href="reportes.html?tipo=abandonado"><button>Abandonados</button></a>
         </div>
 
         <!--Maltratado-->
         <div class="reporte-card maltratado">
-          <div class="img-box"><img src="../assets/img/maltratados.png" alt="Animal Maltratado" /></div>
+          <div class="img-box"><img src="assets/img/maltratados.png" alt="Animal Maltratado" /></div>
           <a href="reportes.html?tipo=maltratado"><button>Maltratados</button></a>
         </div>
 
         <!--Encerrado-->
         <div class="reporte-card encerrado">
-          <div class="img-box"><img src="../assets/img/encerrados.png" alt="Animal Encerrado" /></div>
+          <div class="img-box"><img src="assets/img/encerrados.png" alt="Animal Encerrado" /></div>
           <a href="reportes.html?tipo=encerrado"><button>Encerrados</button></a>
         </div>
       </div>
@@ -88,14 +88,14 @@
       <h2><i class="fa-solid fa-cat"></i>Ellos ya tienen una segunda oportunidad</h2>
       <p>Conoce a nuestros rescatados en esta pequeña galería.</p>
       <div class="galeria">
-        <img src="../assets/img/galeria1.png" alt="info1" />
-        <img src="../assets/img/galeria2.png" alt="info2" />
-        <img src="../assets/img/galeria3.png" alt="info3" />
-        <img src="../assets/img/galeria4.png" alt="info4" />
-        <img src="../assets/img/galeria5.png" alt="info5" />
-        <img src="../assets/img/galeria6.png" alt="info6" />
-        <img src="../assets/img/galeria7.png" alt="info7" />
-        <img src="../assets/img/galeria8.png" alt="info8" />
+        <img src="assets/img/galeria1.png" alt="info1" />
+        <img src="assets/img/galeria2.png" alt="info2" />
+        <img src="assets/img/galeria3.png" alt="info3" />
+        <img src="assets/img/galeria4.png" alt="info4" />
+        <img src="assets/img/galeria5.png" alt="info5" />
+        <img src="assets/img/galeria6.png" alt="info6" />
+        <img src="assets/img/galeria7.png" alt="info7" />
+        <img src="assets/img/galeria8.png" alt="info8" />
       </div>
     </section>
 
@@ -118,7 +118,7 @@
     </div>
 
     <div id="footer"></div>
-    <script src="../dist/main.js" type="module"></script>
-    <script src="../dist/accesibility.js" defer></script>
+    <script src="dist/main.js" type="module"></script>
+    <script src="dist/accesibility.js" defer></script>
   </body>
 </html>
