--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
         <!--Abandonado-->
         <div class="reporte-card abandonado">
           <div class="img-box"><img src="assets/img/abandonados.png" alt="Animal Abandonado" /></div> 
-          <a href="reportes.html?tipo=abandonado"><button>Abandonados</button></a>
+          <a href="page/reportes.html?tipo=abandonado"><button>Abandonados</button></a>
         </div>
 
         <!--Maltratado-->
         <div class="reporte-card maltratado">
           <div class="img-box"><img src="assets/img/maltratados.png" alt="Animal Maltratado" /></div>
-          <a href="reportes.html?tipo=maltratado"><button>Maltratados</button></a>
+          <a href="page/reportes.html?tipo=maltratado"><button>Maltratados</button></a>
         </div>
 
         <!--Encerrado-->
         <div class="reporte-card encerrado">
           <div class="img-box"><img src="assets/img/encerrados.png" alt="Animal Encerrado" /></div>
-          <a href="reportes.html?tipo=encerrado"><button>Encerrados</button></a>
+          <a href="page/reportes.html?tipo=encerrado"><button>Encerrados</button></a>
         </div>
       </div>
     </section>
